--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/rneuo/webpack-browser-sync#readme",
   "devDependencies": {
+    "assets-webpack-plugin": "^3.5.0",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
